@@ -6,7 +6,7 @@ import com.rackspace.papi.components.ratelimit.config.ConfiguredRatelimit;
 /**
  * @author Freynard
  */
-public class RateLimitKeyGenerator {
+public final class RateLimitKeyGenerator {
    private static final String UNDERSCORE = "_";
    
    private RateLimitKeyGenerator(){
@@ -24,7 +24,7 @@ public class RateLimitKeyGenerator {
       }
 
       builder.append(UNDERSCORE).append(limit.getUnit().value());
-      builder.append(UNDERSCORE).append(new Integer(limit.getValue()).toString());
+      builder.append(UNDERSCORE).append(Integer.valueOf(limit.getValue()).toString());
 
       return builder.toString();
    }
